--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bannerstack.com",
+  "name": "api.geekdom.com",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,18 +9,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.heroku.com/bannerstack.git"
+    "url": "https://github.com/pedrom40/geekdom_backend.git"
   },
   "author": "Pedro Morin",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
-    "ejs": "^2.5.7",
+    "dotenv": "^4.0.0",
     "express": "^4.16.1",
     "express-session": "^1.15.6",
-    "imgix.js": "^3.3.2",
     "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
     "shipping-ups": "^0.5.7"
   }
 }
